<resources>
    <string name="app_name">Owaste</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_title">想找哪間友善不塑餐廳呢</string>
    <string name="login_now">點擊這裡登入啟用集點功能</string>
    <string name="click_to_login_in">立即登入開始集點吧</string>
    <string name="user_level">Lv. 1 減塑初心者</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_loyalty_card">成為滿滿的集點卡</string>
    <string name="txt_loyalty_card_restaurant"><![CDATA[好好文化創意 We & Me Cafe]]></string>
    <string name="txt_new_name">名稱</string>
    <string name="txt_new_address">地址</string>
    <string name="txt_new_tel">電話</string>
    <string name="txt_new_website">網站</string>
    <string name="txt_new_for_here">內用</string>
    <string name="txt_new_togo">外帶</string>
    <string name="edittxt_new_name">店家名稱</string>
    <string name="edittxt_new_address">店家地址</string>
    <string name="edittxt_new_tel">店家電話</string>
    <string name="edittxt_new_website">店家網站（選填）</string>
    <string name="radiobtn_1">全塑但可自備餐盒</string>
    <string name="radiobtn_2">部分餐點有塑</string>
    <string name="txt_radiobtn_3">完全不塑</string>
    <string name="txt_open_time">營業時間（選填）</string>
    <string name="txt_open_time_mon">星期一</string>
    <string name="txt_open_time_tue">星期二</string>
    <string name="txt_open_time_wed">星期三</string>
    <string name="txt_open_time_thu">星期四</string>
    <string name="txt_open_time_fri">星期五</string>
    <string name="txt_open_time_sat">星期六</string>
    <string name="txt_open_time_sun">星期日</string>
    <string name="txt_togo_1">可自備餐盒</string>
    <string name="txt_togo_2">提供餐具租借</string>
    <string name="txt_commit">提交審核</string>
    <string name="txt_rating_total_left">(</string>
    <string name="txt_rating_total_right">)</string>
    <string name="txt_dot_between_type_price_level">·</string>
    <string name="txt_clear_filter">清除</string>
    <string name="txt_place_detiail_show_comment">查看評論</string>

    <!--permission dialog-->
    <string name="permanently_denied_message">未取得位置權限無法顯示當前位置\n請至設定開啟</string>
    <string name="rationale_callback_title">未取得權限</string>
    <string name="rationale_callback_message">請開啟權限</string>
    <string name="rationale_callback_positive_button">好</string>
    <string name="rationale_callback_negative_button">先不要</string>
    <string name="permission_permanently_denied_title">改變心意吧</string>
    <string name="permission_permanently_denied_message">需要權限</string>
    <string name="permission_permanently_denied_positive_button">好</string>
    <string name="permission_permanently_denied_negative_button">先不要</string>
    <string name="when_permissions_are_denied_title">請開啟權限</string>
    <string name="when_permissions_are_denied_message">未取得權限無法顯示位置</string>
    <string name="when_permissions_are_denied_positive_button">知道了</string>

    <!--toast-->
    <string name="login_hint_on_fab_clicked">欲使用會員功能請先點擊下方按鈕登入喔</string>
    <string name="if_location_service_off">如要繼續，請開啟裝置定位功能\n(需使用 Google 定位服務)</string>
    <string name="if_location_service_off_positive_button">好窩</string>
    <string name="if_location_service_off_negative_button">先不要</string>
    <string name="if_location_service_off_negative_button_clicked">未開啟定位服務</string>
    <string name="empty_search">尚未輸入完整店家名稱喔</string>
    <string name="log_out">怎麼登出得這麼突然…</string>

    <!--price level-->
    <string name="price_level_2">$</string>
    <string name="price_level_3">$$</string>
    <string name="price_level_4">$$$</string>

    <!--user level-->
    <string name="user_level_1">Lv.1</string>
    <string name="user_level_2">Lv.2</string>
    <string name="user_level_3">Lv.3</string>
    <string name="user_level_4">Lv.4</string>
    <string name="user_level_5">Lv.5</string>
    <string name="user_level_6">Lv.6</string>
    <string name="user_level_7">Lv.7</string>
    <string name="user_level_8">Lv.8</string>
    <string name="user_level_9">Lv.9</string>
    <string name="user_level_10">Lv.10</string>

    <!--is place open-->
    <string name="place_open">營業中</string>
    <string name="place_close">休息中</string>

    <string name="map_style_failed">Map style loads failed</string>

    <string name="on_commit_new_restaurant">感謝您的協助！審核結果會寄送到您的信箱</string>
    <string name="on_commit_new_restaurant_error">名稱、地址、電話、內用減塑情形為必填喔，感謝您！</string>

    <string name="add_points_n_exp_1">點數新增成功！經驗值 + </string>

    <string name="add_points_n_exp_2"> ！</string>
    <string name="add_cards_n_exp">新增店家集點卡！經驗值 + </string>


</resources>
