<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFF"
        android:layout_gravity="center"
        style="@style/add_new_restaurant_dialog">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_add_new_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".add.NewRestaurantDialogFragment">


                <TextView
                    android:id="@+id/txt_new_name"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/txt_new_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_new_address"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_new_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_name" />

                <TextView
                    android:id="@+id/txt_new_tel"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_new_tel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_address" />

                <TextView
                    android:id="@+id/txt_new_website"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_new_website"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_tel" />

                <TextView
                    android:id="@+id/txt_new_for_here"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_new_for_here"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_website" />

                <TextView
                    android:id="@+id/txt_new_togo"
                    style="@style/add_new_restaurant_title"
                    android:layout_marginStart="6dp"
                    android:text="@string/txt_new_togo"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_new_for_here"
                    app:layout_constraintStart_toStartOf="@+id/cb_togo_2"
                    app:layout_constraintTop_toTopOf="@+id/txt_new_for_here" />

                <EditText
                    android:id="@+id/edittxt_new_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_add_new_restaurant_edittext"
                    android:ems="12"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/edittxt_new_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingTop="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingBottom="@dimen/add_new_restaurant_edittext_padding"
                    android:singleLine="true"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_new_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_new_name"
                    app:layout_constraintTop_toTopOf="@+id/txt_new_name" />

                <EditText
                    android:id="@+id/edittxt_new_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_add_new_restaurant_edittext"
                    android:ems="12"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/edittxt_new_address"
                    android:inputType="textPostalAddress"
                    android:paddingStart="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingTop="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingBottom="@dimen/add_new_restaurant_edittext_padding"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_new_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_new_name"
                    app:layout_constraintTop_toTopOf="@+id/txt_new_address" />

                <EditText
                    android:id="@+id/edittxt_new_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_add_new_restaurant_edittext"
                    android:ems="12"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/edittxt_new_tel"
                    android:inputType="phone"
                    android:paddingStart="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingTop="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingBottom="@dimen/add_new_restaurant_edittext_padding"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_new_tel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_new_name"
                    app:layout_constraintTop_toTopOf="@+id/txt_new_tel" />

                <EditText
                    android:id="@+id/edittxt_new_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_add_new_restaurant_edittext"
                    android:ems="12"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/edittxt_new_website"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingTop="@dimen/add_new_restaurant_edittext_padding"
                    android:paddingBottom="@dimen/add_new_restaurant_edittext_padding"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_new_website"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_new_name"
                    app:layout_constraintTop_toTopOf="@+id/txt_new_website" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_for_here">

                    <RadioButton
                        android:id="@+id/radiobtn_1"
                        style="@style/radiobtn_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobtn_1" />

                    <RadioButton
                        android:id="@+id/radiobtn_2"
                        style="@style/radiobtn_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobtn_2" />

                    <RadioButton
                        android:id="@+id/radiobtn_3"
                        style="@style/radiobtn_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_radiobtn_3" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txt_open_time"
                    style="@style/add_new_restaurant_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_open_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <CheckBox
                    android:id="@+id/cb_open_time_mon"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_mon"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_sun" />

                <CheckBox
                    android:id="@+id/cb_open_time_tue"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_tue"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_mon" />

                <CheckBox
                    android:id="@+id/cb_open_time_wed"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_wed"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_tue" />

                <CheckBox
                    android:id="@+id/cb_open_time_thu"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_thu"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_wed" />

                <CheckBox
                    android:id="@+id/cb_open_time_fri"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_fri"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_thu" />

                <CheckBox
                    android:id="@+id/cb_open_time_sat"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_open_time_sat"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_fri" />

                <CheckBox
                    android:id="@+id/cb_open_time_sun"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_open_time_sun"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_open_time"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/img_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@android:drawable/arrow_down_float"
                    android:tint="@color/light_green_A7D86D"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_open_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_open_time" />

                <CheckBox
                    android:id="@+id/cb_togo_1"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/txt_togo_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_togo_2" />

                <CheckBox
                    android:id="@+id/cb_togo_2"
                    style="@style/radiobtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_togo_1"
                    app:layout_constraintStart_toStartOf="@+id/cb_togo_1"
                    app:layout_constraintTop_toBottomOf="@+id/txt_new_togo" />

                <Button
                    android:id="@+id/btn_commit"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/light_green_A7D86D"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/txt_commit"
                    android:textColor="@color/white_FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_open_time_sat" />

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edittxt_new_name"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>